--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ torchvision==0.7.0
 Pillow==7.2.0
 beautifulsoup4==4.9.1
 openimages==0.0.1
+numpy==1.19.2
+matplotlib==3.3.2
+pycocotools==2.0.2
+opencv-python==4.4.0.42
+notebook==6.1.4
